--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.9"
 services:
+
   prometheus:
     image: prom/prometheus
     ports:
@@ -7,6 +8,7 @@ services:
     volumes:
       - "$PWD/prom_data:/prometheus"
       - "$PWD/prom_config:/etc/prometheus"
+
   alertmanager:
     image: prom/alertmanager
     ports:
@@ -15,3 +17,10 @@ services:
       - "$PWD/alert_data:/data"
       - "$PWD/alert_config:/config"
     command: --config.file=/config/alertmanager.yml --log.level=debug
+
+  python_app:
+    build:
+      context: ./python_app
+    ports:
+      - "8000:8000"
+      - "8001:8001"
