--- a/prom_config/prometheus.yml
+++ b/prom_config/prometheus.yml
@@ -9,11 +9,18 @@ alerting:
       - targets:
         - alertmanager:9093
 scrape_configs:
+
   - job_name: prometheus
     static_configs:
       - targets:
         - localhost:9090
+
   - job_name: windows-host
     static_configs:
       - targets:
         - host.docker.internal:9182
+
+  - job_name: python_app
+    static_configs:
+      - targets:
+          - python_app:8000
