--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,11 @@ services:
       - "$PWD/alert_config:/config"
     command: --config.file=/config/alertmanager.yml --log.level=debug
 
+  pushgateway:
+    image: prom/pushgateway
+    ports:
+      - "9091:9091"
+
   python_app:
     build:
       context: ./python_app
