--- a/prom_config/prometheus.yml
+++ b/prom_config/prometheus.yml
@@ -1,13 +1,16 @@
 global:
   scrape_interval: 10s
   evaluation_interval: 10s
+
 rule_files:
   - rules.yml
+
 alerting:
   alertmanagers:
     - static_configs:
       - targets:
         - alertmanager:9093
+
 scrape_configs:
 
   - job_name: prometheus
@@ -24,3 +27,9 @@ scrape_configs:
     static_configs:
       - targets:
           - python_app:8000
+
+  - job_name: pushgateway
+    honor_labels: true
+    static_configs:
+      - targets:
+        - pushgateway:9091
